--- a/_posts/1_测试非官方的.md
+++ b/_posts/1_测试非官方的.md
@@ -2,7 +2,7 @@
 
 ---
 layout:     post
-title:      " "
+title:      " 标题"
 date:       2024-10-15 12:00:00
 author:     "MGTA"
 header-img: "img/post-bg-2015.jpg"
