Update and rename 5_对方怪兽发动g.md to 2024-10-15-001.md

--- a/_posts/2024-10-15-001.md
+++ b/_posts/2024-10-15-001.md
@@ -1,8 +1,6 @@
-# [对方怪兽发动g](https://github.com/692/blog/issues/5)
-
 ---
 layout:     post
-title:      " "
+title:      "是否 "
 date:       2024-10-15 12:00:00
 author:     "MGTA"
 header-img: "img/post-bg-2015.jpg"
